<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true">
	    <LinearLayout android:id="@+id/edit_time_block_row_1"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
    		android:layout_margin="5dp">
		    <TextView
		        android:id="@+id/edit_time_block_name_text"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:text="@string/edit_time_block_name_text"
		        android:textAllCaps="true"
		        android:textSize="20dp" />
		
		    <EditText
		        android:id="@+id/edit_time_block_name_input"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/edit_time_block_name_text" />
	    </LinearLayout>

	    <LinearLayout android:id="@+id/edit_time_block_row_2"
	        xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp">
		    <TextView
		        android:id="@+id/edit_time_block_type_text"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:text="@string/edit_time_block_type_text"
		        android:textAllCaps="true"
		        android:textSize="20dp" />
		
		    <Spinner
    			android:id="@+id/edit_time_block_type_spinner"
    			android:layout_width="0dp"
		        android:layout_weight='1'
    			android:layout_height="wrap_content" />
		</LinearLayout>
	
	    <LinearLayout android:id="@+id/edit_time_block_row_3"
	        xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp">
		    <TextView
		        android:id="@+id/edit_time_block_location_text"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:text="@string/edit_time_block_location_text"
		        android:textAllCaps="true"
		        android:textSize="20dp" />
		
		    <Button
		        android:id="@+id/edit_time_block_location_button"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:onClick="selectLocation"
		        android:text="@string/edit_time_block_location_button_text" />
		</LinearLayout>
    
	    <LinearLayout android:id="@+id/edit_time_block_row_4"
	        xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp">
		    <TextView
		        android:id="@+id/edit_time_block_start_time_text"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:text="@string/edit_time_block_start_time_text"
		        android:textAllCaps="true"
		        android:textSize="20dp" />
		    
		    <Spinner
    			android:id="@+id/edit_time_block_start_time_spinner"
    			android:layout_width="0dp"
		        android:layout_weight='1'
    			android:layout_height="wrap_content" />
		</LinearLayout>
    
	    <LinearLayout android:id="@+id/edit_time_block_row_5"
	        xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp">
		    <TextView
		        android:id="@+id/edit_time_block_end_time_text"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:text="@string/edit_time_block_end_time_text"
		        android:textAllCaps="true"
		        android:textSize="20dp" />
		    
		    <Spinner
    			android:id="@+id/edit_time_block_end_time_spinner"
    			android:layout_width="0dp"
		        android:layout_weight='1'
    			android:layout_height="wrap_content" />
		</LinearLayout>
    
	    <LinearLayout android:id="@+id/edit_time_block_row_6"
	        xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp">
		    <Button
		        android:id="@+id/edit_time_block_confirm_button"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:onClick="confirmEdit"
		        android:text="@string/edit_time_block_confirm_button_text" />
		
		    <Button
		        android:id="@+id/edit_time_block_cancel_button"
		        android:layout_width="0dp"
		        android:layout_weight='1'
		        android:layout_height="wrap_content"
		        android:onClick="cancelEdit"
		        android:text="@string/edit_time_block_cancel_button_text" />
		</LinearLayout>
	</LinearLayout>
    
</RelativeLayout>
